Bug 479483 - Deleting an image from the annotation dialog makes the dialog jump to the first image
Summary: Deleting an image from the annotation dialog makes the dialog jump to the fir...
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Annotation Dialog (other bugs)
Version First Reported In: 5.12.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-06 20:46 UTC by Johannes Zarl-Zierl
Modified: 2024-01-06 22:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2024-01-06 20:46:58 UTC
SUMMARY
Crash report as written by Constantin Orăsan (via the mailing list):
Whenever I delete an image, the annotation dialog jumps back to the first image from the selection.

STEPS TO REPRODUCE
1. select a bunch of images
2. select "annotate individual images"
3. annotate images or just navigate through images
4. delete an image from the dialog

At this stage I would expect that the dialog moves to the next image (as it
used to do in the past). Instead it jumps back to the first image in the
selection.

I compiled KPA from the source on Ubuntu 23.10.
Comment 1 Johannes Zarl-Zierl 2024-01-06 22:20:24 UTC
Git commit 02445f10283c3f12f800cd168bcbe94076177ffb by Johannes Zarl-Zierl.
Committed on 06/01/2024 at 23:20.
Pushed by johanneszarl into branch 'master'.

Avoid jumping to the first image if an image is deleted in the annotation dialog

M  +2    -2    AnnotationDialog/Dialog.cpp
M  +8    -1    AnnotationDialog/ImagePreviewWidget.cpp
M  +7    -1    AnnotationDialog/ImagePreviewWidget.h
M  +1    -0    CHANGELOG.md

https://invent.kde.org/graphics/kphotoalbum/-/commit/02445f10283c3f12f800cd168bcbe94076177ffb