Avoid jumping to the first image if an image is deleted in the annotation dialog

BUG: 479483